--- a/app/templates/components/app-nav.hbs
+++ b/app/templates/components/app-nav.hbs
@@ -23,7 +23,7 @@
 
       <p class="control">
         <a class="button is-primary" href="#" {{action "login"}}>
-          Login
+          Log In
         </a>
       </p>
       {{/if}}
